@@ -17,10 +17,12 @@ typedef enum {
 } mln_iothread_ep_type_t;
 
 typedef void *(*mln_iothread_entry_t)(void *);
-typedef void (*mln_iothread_msg_process_t)(mln_iothread_t *, mln_iothread_ep_type_t, mln_u32_t, void *);
+typedef void (*mln_iothread_msg_process_t)(mln_iothread_t *, mln_iothread_ep_type_t, mln_iothread_msg_t *);
 
 struct mln_iothread_msg_s {
-    int                         feedback;
+    mln_u32_t                   feedback:1;
+    mln_u32_t                   hold:1;
+    mln_u32_t                   padding:30;
     mln_u32_t                   type;
     void                       *data;
     pthread_mutex_t             mutex;
@@ -52,10 +54,14 @@ struct mln_iothread_s {
 };
 
 #define mln_iothread_sockfd_get(p,t)   ((t) == io_thread? (p)->io_fd: (p)->user_fd)
+#define mln_iothread_msg_hold(m)       ((m)->hold = 1)
+#define mln_iothread_msg_release(m)    pthread_mutex_unlock(&(m)->mutex)
+#define mln_iothread_msg_type(m)       ((m)->type)
+#define mln_iothread_msg_data(m)       ((m)->data)
 
 extern int mln_iothread_init(mln_iothread_t *t, struct mln_iothread_attr *attr);
 extern void mln_iothread_destroy(mln_iothread_t *t);
-extern int mln_iothread_send(mln_iothread_t *t, mln_u32_t type, void *data, mln_iothread_ep_type_t to, int feedback);
+extern int mln_iothread_send(mln_iothread_t *t, mln_u32_t type, void *data, mln_iothread_ep_type_t to, mln_u32_t feedback);
 extern int mln_iothread_recv(mln_iothread_t *t, mln_iothread_ep_type_t from);
 
 #endif
